--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "babel-preset-next": "^1.4.0",
     "eslint": "^8",
     "eslint-config-next": "^15.2.4",
     "postcss": "^8",
