--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "date-fns": "^4.1.0",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0"
