--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.49.4",
-    "date-fns": "^4.1.0",
+    "date-fns": "2.29.3",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.1.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "babel-preset-next": "^1.4.0",
